--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,9 @@ html{background-color: black;}
 
 /* debug */
 /* *{background-color: rgba(255, 0, 0, 0.1) !important;} */
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 0.8em;
+  }
+}
